--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,39 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 .content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    background: #1F2937;
+    padding: 0px 150px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.links {
+    display: flex;
+    gap: 16px;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .footer {
@@ -13,6 +42,6 @@ body {
     justify-content: center;
     align-items: center;
     background: #1F2937;
-    font-size: 24px;
-    color: #F9FAF8;
+    font-size: 18px;
+    color: #E5E7EB;
 }
