--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,35 @@ body {
     width: 700px;
 }
 
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 150px 100px;
+}
+
+.info h1 {
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1F2937;
+}
+
+.info .facts {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    color: #1F2937;
+    font-weight: light;
+    font-size: 18px;
+    text-align: center;
+}
+
+.info .fact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .footer {
     display: flex;
     justify-content: center;
