--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px 150px 100px;
+    padding: 15px 200px 100px;
 }
 
 .info h1 {
@@ -104,6 +104,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    padding: 100px 250px;
+    background: #E5E7EB;
+    color: #1F2937;
+}
+
+.quote .quote-text {
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+}
+
+.quote .byline {
+    align-self: flex-end;
+    font-weight: bold;
 }
 
 .footer {
