--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,41 @@ body {
     font-weight: bold;
 }
 
+.signup {
+    display: flex;
+    justify-content: space-between;
+    margin: 100px 150px;
+    padding: 50px 100px;
+    background: #3882F6;
+    align-items: center;
+    border-radius: 6px;
+}
+
+.signup .message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.signup .message h1 {
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.signup .message .notice {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.signup button {
+    background: #3882F6;
+    color: #F9FAF8;
+    border-color: #F9FAF8;
+    border-radius: 6px;
+    width: 100px;
+}
+
 .footer {
     display: flex;
     justify-content: center;
