--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
     background: #1F2937;
     padding: 0px 150px 100px;
+    flex: 6;
 }
 
 .header {
@@ -24,16 +25,20 @@ body {
     align-items: center;
 }
 
-.logo {
+.header .logo {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: bold;
 }
 
-.links {
+.header .links {
     display: flex;
     gap: 16px;
     font-size: 18px;
+}
+
+.links a {
+    text-decoration: none;
     color: #E5E7EB;
 }
 
@@ -70,11 +75,13 @@ body {
     align-items: center;
     width: 100px;
     border-radius: 6px;
+    border-color: #3882F6;
 }
 
 .chunk img {
     height: auto;
     width: 700px;
+    color:#E5E7EB;
 }
 
 .info {
@@ -82,6 +89,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 15px 200px 100px;
+    flex: 5;
 }
 
 .info h1 {
@@ -100,10 +108,17 @@ body {
     text-align: center;
 }
 
-.info .fact {
+.facts .fact {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.fact img {
+    border-radius: 6px;
+    height: auto;
+    width: 300px;
+    color:#E5E7EB;
 }
 
 .quote {
@@ -112,6 +127,7 @@ body {
     padding: 100px 250px;
     background: #E5E7EB;
     color: #1F2937;
+    flex: 4;
 }
 
 .quote .quote-text {
@@ -133,6 +149,7 @@ body {
     background: #3882F6;
     align-items: center;
     border-radius: 6px;
+    flex: 3;
 }
 
 .signup .message {
